; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_workitem.c_RtlpStartWorkerThread.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_workitem.c_RtlpStartWorkerThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @RtlpStartWorkerThread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RtlpStartWorkerThread(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  store volatile i64 0, i64* %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i64 -10000, i64* %7, align 8
  %8 = load i32, i32* %2, align 4
  %9 = ptrtoint i64* %6 to i32
  %10 = call i32 @RtlpStartThreadFunc(i32 %8, i32 %9, i32* %4)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i64 @NT_SUCCESS(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %26

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @NtResumeThread(i32 %15, i32* null)
  br label %17

17:                                               ; preds = %20, %14
  %18 = load volatile i64, i64* %6, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i32, i32* @FALSE, align 4
  %22 = call i32 @NtDelayExecution(i32 %21, %struct.TYPE_3__* %5)
  br label %17

23:                                               ; preds = %17
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @NtClose(i32 %24)
  br label %26

26:                                               ; preds = %23, %1
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @RtlpStartThreadFunc(i32, i32, i32*) #1

declare dso_local i64 @NT_SUCCESS(i32) #1

declare dso_local i32 @NtResumeThread(i32, i32*) #1

declare dso_local i32 @NtDelayExecution(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @NtClose(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
